add properties support to generator gradle plugin